--- a/404.html
+++ b/404.html
@@ -4,20 +4,18 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;800&display=swap" rel="stylesheet"> 
-<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-	<title>PochkaCraft - 2 сезон</title>
+	<title>Страница не найдена</title>
 </head>
 <body>
 	<style type="text/css">
 		.title{
 			
-			font-size: 60px;
+			font-size: 110px;
 			padding: 50px;
 		}
 		text{
 			font-family: 'Raleway', sans-serif;
 			color: white;
-			font-size: 25px;
 		}
 		a{
 			font-family: 'Raleway', sans-serif;
@@ -34,21 +32,14 @@
 		body{
 			background-color: #111111;
 		}
-		span{
-			color: red;
-		}
 	</style>
 
 
 	<center>
 	<img src="img/logo.png" width="400px" class="logo"><br>
-<text class = "title">МЕЖСЕЗОНЬЕ</text><br>
-<text><span>Сейчас</span> на сервере нету вайтлиста, полная анархия, мясо, матюки и голые...</text><br>
-<text>Но это не надолго, ведь <span>с 1 декабря</span> на Почкекрафт начинается <span>новый сезон!</span></text><br>
-<text>Так то PochkaCraft - ванильный, приватный сервер с платными/бесплатными проходками...</text><br>
-<text>Вся информация, чат, новости и вообще <span>весь движ в </span><a href="https://discord.gg/UF4HFUNJkN">дискорде</a></text><br>
-<br>
-<script src="//megatimer.ru/get/5820547f1dc61b6a857f98d484a5c27e.js"></script>
+<text class = "title">404</text><br>
+<text>Страница не найдена</text><br>
+<a href="https://keras1n.github.io/pochkacraft.github.io/"> На главную</a>
 </center>
 </body>
 </html>
