--- a/roleplay.html
+++ b/roleplay.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>CoreProtect - PochkaCraft</title>
-
+	<title>О RolePlay - PochkaCraft</title>
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-
 	<link rel="stylesheet" type="text/css" href="css/main.css">
-
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script type="text/javascript">
 	$(window).scroll(function () {
@@ -81,36 +78,34 @@ $(function() {
 </div>
 </div>
 <header>
-	<center><br><br><h1>CoreProtect</h1></center>
-
+	<center><br><br><h1>О RolePlay</h1>
+		<h2>Что это и как?</h2>
+	</center>
 
 </header>
 <div class="article">
-<h3>Долой приваты! Но как жить без них? В любом случае будут недобросовестные игроки. Выход есть и это - CoreProtect.</h3>
-<br>
-Что если я скажу вам что есть плагин который логирует абсолютно все изменения блоков, в каждом чанке, все изменения сундуков, кто что взял и положил, и что не мало важно, когда.
-И что введя одну лишь команду можно вернуть, откатить все события в определёном радиусе, хоть на 30 дней назад. Как будто ничего и не было.
-<br>
-<br>
-<center><h2>Как использовать?</h2></center>
-Теперь каждый игрок может использовать инспектор для обнаружения гриферов. Конечно, самому наводить правосудие не надо, лучше написать в <a href="">специальный канал в дискорде.</a>
-<br><br>
-<center><h2>История предметов</h2></center>
-<br>
-	Введите <span class="redmark">/co i</span>, для активации/деактивации инспектора.
-	<br>Теперь если нажать <span class="redmark">ПКМ</span> по сундуку (шалкеру, печке и тд.), в чате инспектор отобразит изменения и перемещения предметов в нём, и временем когда это было сделано. На нашем сервере Инспектор был переведен на русский дабы не возникало затруднений.<br><br>
-	<img src="img/co-lkm.png">
-<center><h2>История блоков</h2></center>
-<br>
-В режиме <span class="redmark">/co i</span> по нажатию <span class="redmark">ЛКМ</span> можно также смотреть историю блоков, кто сюда что ставил и ломал. 
-
-<br><br>
-<img src="img/co-pkm.png">
+	<span class="redmark">Всё что происходит в игре - не касаеться реального мира, и наоборот.</span> Мы не требуем чтобы вы ставили никнеймы в стиле Барак_Обэмэ и отыгрывали как вы чихнули на 200 строк текста. Просто находясь в игре говорите только про внутримировые события. Ну а если вы хотите сказать OOC информацию - предупреждайте чтобы не испортить игрокам атмосферу.<br><br>По факту то что на сервере есть меры и граждане - уже ролевая игра, вот только не надо тут про модераторов и админов затирать, ладно?)
+	<center>
+		<h2>Термины</h2>
+		OOC информация - информация которая касаеться реального мира.<br>
+		IC инфа - про внутриигровой мир.<br>
+		МГ(метагейминг) - использовать OOC в IC и наоборот.<br>
+</center>
+<center>
+		<h2>Примеры</h2>
+		OOC - как хорошо что админы банят гриферов!<br>
+		IC - как хорошо что боги наказывают разбойников и посылают в мир иной)<br>
+		<hr>
+		OOC - Мой друг постоит в афк пару минут.<br>
+		IC - Мой друг что-то задумался...)<br>
+		<hr>
+		OOC - Что у меня над головой? Ник.<br>
+		IC - Что у меня над головой? Небо.<br>
+		<hr><br>это всё примеры если что.
+</center>
+	
 
 </div>
-
-
-
 <footer>
     <a href = "https://discord.gg/HsxSPyg7RG" class="foolink"> Дискорд </a> <br><a href = "votes.html">Проголосовать на мониторингах</a><br>
     <text>© PochkaCraft 2021 | <a href="https://twitch.tv/lingkeras1n">Made by KeRas1n</a></text><br>
