--- a/rules.html
+++ b/rules.html
@@ -49,7 +49,7 @@ $(function() {
 </script>
 <div class="menu">
 
-		<a class="menu-triger" href="#"></a>
+		<a class="menu-triger" href="#"><img src="img/menu.png"></a>
 
 		<div class="menu-popup">
 
@@ -62,6 +62,8 @@ $(function() {
 
 				<li><a href="https://discord.gg/HsxSPyg7RG">Дискорд</a></li>
 
+				<li><a href="buy">Покупка доступа</a></li>
+
 				<li><a href="http://s23.joinserver.ru:25809/">PochkaMaps</a></li>
 
 			</ul>						
@@ -71,30 +73,67 @@ $(function() {
 	</div>
 
 <div class="realmenu">
-	<a href="#" class="btn-selected">Правила</a>
-    <a href="wiki" class="btn">Вики</a>
+	<a href="rules" class="btn">Правила</a>
+	<a href="wiki" class="btn">Вики</a>
 	<a href="https://discord.gg/HsxSPyg7RG" class="btn">Дискорд</a>
 	<a href="http://s23.joinserver.ru:25809/" class="btn">PochkaMaps</a>
 </div>
 </div>
+
 <header><center><br><br><br><h1>Правила сервера</h1><br><br><br></center></header>
 <div class="article">
 	<text>
-	<h3>
-<center><h2>Запрещено:</h1></center>
-1. Гриферство (в городах).<br>
-2. Любая деформация/поломка построек, не принадлежащих Вам (в городах).<br>
-3. Использование чужих сундуков и подобных блоков (в городах).<br>
-4. Читерство (так же использование модов, дающие преимущество в игре).<br>
-5. Мешать другим игрокам.<br>
-6. Флуд в любом проявлении.<br>
-7. Реклама любого постороннего контента.<br>
-8. Нарушение правил платформы Twitch.<br>
-9. Оскорбительное и токсичное отношение (в любом проявлении) к игрокам, родным и администрации сервера.<br>
-10. Запрещены любые постройки, понижающие эффективность работы сервера (лаг машины, большие фермы)<br>
-11. Запрещен дюп. <br>
+	<h4>
+<center><h2>Общие положения</h1></center>
+1.1 Не знание правил не освобождает от ответственности.<br>
+1.2 Любая деформация/поломка построек, не принадлежащих вам запрещена.<br>
+1.3 Использование чужих сундуков и подобных блоков - запрещено.<br>
+1.4 Читерство, дюп (так же использование модов, дающие преимущество в игре) - запрещено.<br>
+1.5 Убийства без РП причины на то или договоренности - запрещены. <br>
+1.6 Нарушение правил платформы Twitch - запрещено (символика, банворды и т.д.).<br>
+1.7 Оскорбительное и токсичное отношение (в любом проявлении) к игрокам, родным и администрации сервера.<br>
+1.8 Запрещены любые постройки, понижающие эффективность работы сервера (лаг машины, большие фермы)<br>
+1.9 Сервер позиционируеться как Медиум РП. Запрещён МГ - метагейминг.<br>
+</h4>
+</text>
+<text>
+	<h4>
+<center><h2>Основное</h1></center>
+2.1 Продажа/передача аккаунтов на сервере - запрещена.<br>
+2.2 Покупка чего либо в игре за реальные деньги - запрещена.<br>
+2.3 Возврат средств за любые услуги не предоставляется.<br>
+2.4 Если вы заняли територию, пометьте её чем-либо чтобы игроки понимали что она занята.<br>
+2.5 При убийстве у вас должна быть РП причина. (Игроку запрещён въезд к вам в город, война, договоренность.)<br>
+2.6 Администраторы имеют большую власть чем правила.<br>
+2.7 Наказания выдаються на рассмотрение администрации.<br>
+</h4>
+</text>
+<text>
+	<h4>
+<center><h2>Чат в игре</h1></center>
+3.1 Флуд и реклама в любом проявлении запрещены.<br>
+3.2 Запрещено нарушения правил платформы Twitch.<br>
+3.3 Запрещено разжигание конфликтов и ненависти/оскорбления родных.<br>
 
-</h3>
+</h4>
+</text>
+<text>
+	<h4>
+<center><h2>Discord сервер</h1></center>
+4.1 Запрещается рассылать спам или заниматься самопродвижением (приглашения на сервер, реклама и т. д.). Исключение - канал #медиа<br>
+4.2 Относитесь ко всем с уважением. На сервере категорически запрещены домогательства, преследования, сексизм, расизм и разжигание ненависти.<br>
+4.3 Не разжигайте конфликты в стенах сервера.<br>
+4.4 Запрещается публиковать откровенный и непристойный контент. Данное правило распространяется на тексты, изображения или ссылки, содержащие или описывающие сцены секса, наготу, сцены насилия или другой шокирующий контент.<br>
+4.5 ОБЯЗАТЕЛЬНО СТАВЬТЕ СЕБЕ НИКИ В ДИСКОРДЕ ТАКИЕ ЖЕ КАК И В ИГРЕ.<br>
+</h4>
+</text>
+<text>
+	<h4>
+<center><h2>Города</h1></center>
+5.1 В вашем городе должно находиться здание правительства.<br>
+5.2 Любые войны должны происходить под присмотром администратора!<br>
+5.3 Во время официально признаной войны (объявленой в дс канале #новости), правила 1.2, 1.3 - не функционируют между сторонами атаки и защиты. <br>
+</h4>
 </text>
 </div>
 
