--- a/typical-page.html
+++ b/typical-page.html
@@ -77,7 +77,12 @@ $(function() {
 	<a href="http://s23.joinserver.ru:25809/" class="btn">PochkaMaps</a>
 </div>
 </div>
+<header>
+	<center><br><br><h1>ВИКИ ПОЧКАКРАФТ</h1>
+		<h2>Тут можно ознакомиться со справочными статьями.</h2>
+	</center>
 
+</header>
 
 <footer>
     <a href = "https://discord.gg/HsxSPyg7RG" class="foolink"> Дискорд </a> <br><a href = "votes.html">Проголосовать на мониторингах</a><br>
