--- a/about-offseasons.html
+++ b/about-offseasons.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>CoreProtect - PochkaCraft</title>
-
+	<title>Сезоны - PochkaCraft</title>
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-
 	<link rel="stylesheet" type="text/css" href="css/main.css">
-
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script type="text/javascript">
 	$(window).scroll(function () {
@@ -52,7 +49,7 @@ $(function() {
 </script>
 <div class="menu">
 
-		<a class="menu-triger" href="#"></a>
+		<a class="menu-triger" href="#"><img src="img/menu.png"></a>
 
 		<div class="menu-popup">
 
@@ -64,6 +61,8 @@ $(function() {
 				<li><a href="wiki">Вики</a></li>		
 
 				<li><a href="https://discord.gg/HsxSPyg7RG">Дискорд</a></li>
+
+				<li><a href="buy">Покупка доступа</a></li>
 
 				<li><a href="http://s23.joinserver.ru:25809/">PochkaMaps</a></li>
 
@@ -80,36 +79,25 @@ $(function() {
 	<a href="http://s23.joinserver.ru:25809/" class="btn">PochkaMaps</a>
 </div>
 </div>
+
 <header>
-	<center><br><br><h1>CoreProtect</h1></center>
-
-
+	<center><br><br><h1>Сезоны</h1>
+	</center>
 </header>
-<div class="article">
-<h3>Долой приваты! Но как жить без них? В любом случае будут недобросовестные игроки. Выход есть и это - CoreProtect.</h3>
-<br>
-Что если я скажу вам что есть плагин который логирует абсолютно все изменения блоков, в каждом чанке, все изменения сундуков, кто что взял и положил, и что не мало важно, когда.
-И что введя одну лишь команду можно вернуть, откатить все события в определёном радиусе, хоть на 30 дней назад. Как будто ничего и не было.
-<br>
-<br>
-<center><h2>Как использовать?</h2></center>
-Теперь каждый игрок может использовать инспектор для обнаружения гриферов. Конечно, самому наводить правосудие не надо, лучше написать в <a href="">специальный канал в дискорде.</a>
-<br><br>
-<center><h2>История предметов</h2></center>
-<br>
-	Введите <span class="redmark">/co i</span>, для активации/деактивации инспектора.
-	<br>Теперь если нажать <span class="redmark">ПКМ</span> по сундуку (шалкеру, печке и тд.), в чате инспектор отобразит изменения и перемещения предметов в нём, и временем когда это было сделано. На нашем сервере Инспектор был переведен на русский дабы не возникало затруднений.<br><br>
-	<img src="img/co-lkm.png">
-<center><h2>История блоков</h2></center>
-<br>
-В режиме <span class="redmark">/co i</span> по нажатию <span class="redmark">ЛКМ</span> можно также смотреть историю блоков, кто сюда что ставил и ломал. 
-
-<br><br>
-<img src="img/co-pkm.png">
-
+<div class="selector">
+	<a href="about">Текущий сезон</a>
+	<a href="about-previous" >Предыдущие сезоны</a>
+	<a href="" class="activated-select">Межсезонья</a>
 </div>
-
-
+<div class="article">
+	<text class = "text-block">
+		<img src="img/ava.jpg" width="80">
+		<h2>Анархия</h2>
+		
+		<h5>26.11.2021 • 1.16.5 •</h5>
+		Эксперимент. Передышка перед вторым сезоном.
+	</text>
+</div>
 
 <footer>
     <a href = "https://discord.gg/HsxSPyg7RG" class="foolink"> Дискорд </a> <br><a href = "votes.html">Проголосовать на мониторингах</a><br>
