--- a/buy.html
+++ b/buy.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<title>Покупка проходки - PochkaCraft</title>
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-	<title>Покупка доступа - PochkaCraft</title>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script type="text/javascript">
@@ -72,36 +72,26 @@ $(function() {
 
 <div class="realmenu">
 	<a href="rules" class="btn">Правила</a>
-    <a href="wiki" class="btn">Вики</a>
+	<a href="wiki" class="btn">Вики</a>
 	<a href="https://discord.gg/HsxSPyg7RG" class="btn">Дискорд</a>
 	<a href="http://s23.joinserver.ru:25809/" class="btn">PochkaMaps</a>
 </div>
 </div>
-<header><center><br><br><br><h1>Покупка доступа / Спонсорство</h1><br><br><br></center></header>
+<header><center><br><br><br><h1>Покупка проходки</h1><br><br><br></center></header>
 <div class="article">
-	<p><center><h1>Доступ на сервер</h1></center></p>
-		<p>
-Чтобы поиграть на POCHKA CRAFT необходимо купить проходку на один месяц, 30 рублей = 30 дней.
-Вы можете приобрести проходку сразу на несколько месяцев, 2,3,4.<br>
-<center>ВАЖНО!</center><br>
+	<center><div class="choice">30 рублей<br> Ежемесячная проходка на 30 дней.</div></center>
+	<br>
+
+	<h1>Важно!</h1>
 1. Донат с неправильными данными, может, и будет рассчитываться только как помощь проекту.<br>
 2. Если в вашем донате не будет хватать даже 1 рубля, отправленные средства будут расценены как пожертвование.<br>
 3. Доступ к серверу вы получите не сразу, а в течении 24-х часов.<br>
 4. Возврат средств за любые услуги не предоставляется. <br>
-<div class="sponsor">
-	<h1>Подписка на сервер</h1><br> <text class="price">30₽/мес</text><br>
-	<a href="https://new.donatepay.ru/@pochka-craft" class="btn">Купить</a>
+<br> <center><a href="https://new.donatepay.ru/@pochka-craft" target="_blank">Открыть donatepay в новой вкладке</a></center>
 </div>
-</p>
-<p><center><h1>Спонсортсво</h1></center></p>
-<p>Если вам нравиться наш сервере, и вы хотели бы поддержать его развитие, мы вводим статус Спонсора!</p>
-<p><h3>Спонсоры получат: Розовый ник на сервере (в табе, чате, над головой), специальную роль в дискорде.</p>
-<p>Спонсоры не имеют никаких преимуществ перед обычными игроками.</h3></p>
-<div class="sponsor">
-	<h1>Спонсорская подписка</h1><br> <text class="price">150₽/мес</text><br>
-	<a href="https://new.donatepay.ru/@pochka-craft" class="btn">Оформить</a>
-</div>
-</div>
+
+<center><iframe src="https://new.donatepay.ru/@pochka-craft" class="donatepay"></iframe></center>
+
 <footer>
     <a href = "https://discord.gg/HsxSPyg7RG" class="foolink"> Дискорд </a> <br><a href = "votes.html">Проголосовать на мониторингах</a><br>
     <text>© PochkaCraft 2021 | <a href="https://twitch.tv/lingkeras1n">Made by KeRas1n</a></text><br>
