--- a/map.html
+++ b/map.html
@@ -86,6 +86,7 @@ $(function() {
 <body style="margin:0px;padding:0px;overflow:hidden">
 
 	
-<iframe class = "map" src="http://s23.joinserver.ru:25809/"  frameborder="0" width="100%" height="600" />
+<iframe class = "map" src="http://s23.joinserver.ru:25809/"  frameborder="0" width="100%" height="600" /></iframe>
+<center><a href="http://s23.joinserver.ru:25809/">Открыть в новой вкладке</a></center>
 </body>
 </html>
