--- a/votes.html
+++ b/votes.html
@@ -2,16 +2,105 @@
 <html>
 <head>
 	<title>Проголосовать за почку</title>
+	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script type="text/javascript">
+	$(window).scroll(function () {
+if ($(window).scrollTop() >= 20) {
+$('.head').css('background','#212121');
+} else {
+$('.head').css('background','transparent');
+}
+});</script>
+</head>
+<body>
+
+<div class="head" >
+	<a href="index"><img src="img/logo.png" width="250px" class="logo"></a>
+	
+<style type="text/css">#wait{cursor: wait;}</style>
+
+
+<script type="text/javascript">
+//Мобильное меню
+$(function() {
+	var $menu_popup = $('.menu-popup');
+	
+	$(".menu-triger, .menu-close").click(function(){
+		$menu_popup.slideToggle(300, function(){
+			if ($menu_popup.is(':hidden')) {
+				$('body').removeClass('body_pointer');
+			} else {
+				$('body').addClass('body_pointer');
+			}					
+		});  
+		return false;
+	});			
+	
+	$(document).on('click', function(e){
+		if (!$(e.target).closest('.menu').length){
+			$('body').removeClass('body_pointer');
+			$menu_popup.slideUp(300);
+		}
+	});
+});
+
+</script>
+<div class="menu">
+
+		<a class="menu-triger" href="#"></a>
+
+		<div class="menu-popup">
+
+			<a class="menu-close" href="#"></a>
+
+			<ul>
+				<li><a href="rules">Правила</a></li>
+
+				<li><a href="wiki">Вики</a></li>		
+
+				<li><a href="https://discord.gg/HsxSPyg7RG">Дискорд</a></li>
+
+				<li><a href="http://s23.joinserver.ru:25809/">PochkaMaps</a></li>
+
+			</ul>						
+
+		</div>
+
+	</div>
+
+<div class="realmenu">
+	<a href="rules" class="btn">Правила</a>
+	<a href="wiki" class="btn">Вики</a>
+	<a href="https://discord.gg/HsxSPyg7RG" class="btn">Дискорд</a>
+	<a href="http://s23.joinserver.ru:25809/" class="btn">PochkaMaps</a>
+</div>
+</div>
+<header>
+	<center><br><br><h1>Проголосовать за нас на мониторингах</h1>
+		<h2>Тут можно поддержать сервер продвинув его на мониторингах.</h2>
+	</center>
+
+</header>
 </head>
 <body>
 	<center>
-<a href="https://minecraftrating.ru/vote/129536/" onclick="window.open( 'https://minecraftrating.ru/vote/129536/' ); return false;"><img src="https://minecraftrating.ru/templates/theme/images/widgets/widget_vote.png" alt="Голосовать за сервер на minecraftrating.ru" title="Голосовать за сервер на minecraftrating.ru" width="88" height="31" /></a><br>
-<a href="https://hotmc.ru/vote-214660"> Проголосовать на hotmc</a>
+		<br><br><br>
+<a href="https://minecraftrating.ru/vote/129536/">Проголосовать на minecraftrating.ru</a><br>
+<a href="https://hotmc.ru/vote-214660"> Проголосовать на hotmc.ru</a>
 <br><br><br><br><br><br><br><br>
 Мы на других мониторингах (без голосований):<br>
 <a href="https://monitoringminecraft.ru/server/793388">monitoringminecraft.ru</a><br>
 <a href="https://servera-minecraft.net/server/46367">servera-minecraft.net</a>
+<br><br><br><br><br>
+<a href="index">Назад</a>
 </center><br><br><br>
-<a href="https://keras1n.github.io/pochkacraft.github.io/">Назад</a>
+<footer>
+    <a href = "https://discord.gg/HsxSPyg7RG" class="foolink"> Дискорд </a> <br>
+    <text>© PochkaCraft 2021 | <a href="https://twitch.tv/lingkeras1n">Made by KeRas1n</a></text><br>
+    <text> We are in no way affiliated with or endorsed by Mojang, AB.</text><br>
+    <text>Вся размещенная информация на сайте не является публичной офертой.</text>
+</footer>
 </body>
 </html>
