--- a/wiki.html
+++ b/wiki.html
@@ -7,7 +7,7 @@
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script type="text/javascript">
 	$(window).scroll(function () {
-if ($(window).scrollTop() >= 80) {
+if ($(window).scrollTop() >= 40) {
 $('.head').css('background','#212121');
 } else {
 $('.head').css('background','transparent');
@@ -49,7 +49,7 @@ $(function() {
 </script>
 <div class="menu">
 
-		<a class="menu-triger" href="#"></a>
+		<a class="menu-triger" href="#"><img src="img/menu.png"></a>
 
 		<div class="menu-popup">
 
@@ -62,6 +62,8 @@ $(function() {
 
 				<li><a href="https://discord.gg/HsxSPyg7RG">Дискорд</a></li>
 
+				<li><a href="buy">Покупка доступа</a></li>
+
 				<li><a href="http://s23.joinserver.ru:25809/">PochkaMaps</a></li>
 
 			</ul>						
@@ -72,7 +74,7 @@ $(function() {
 
 <div class="realmenu">
 	<a href="rules" class="btn">Правила</a>
-	<a href="#" class="btn-selected">Вики</a>
+	<a href="wiki" class="btn">Вики</a>
 	<a href="https://discord.gg/HsxSPyg7RG" class="btn">Дискорд</a>
 	<a href="http://s23.joinserver.ru:25809/" class="btn">PochkaMaps</a>
 </div>
@@ -97,22 +99,43 @@ $(function() {
 
 <a href="rules">
 <div class = "wiki">	
-<h1>Правила сервера</h1>
+<h2>Правила сервера</h2>
 Ознакомиться с правилами сервера<br>можно тут. <br> <br><img src="img/outlink.png" width="20px">
 </div>
 </a>
 
 <a href="coreprotect">
 <div class = "wiki">
-<h1>CoreProtect</h1>
-"Логирование всех блоков на сервере" или "как жить без привата? <br> <br><img src="img/outlink.png" width="20px">
+<h2>CoreProtect</h2>
+"Логирование всех блоков на сервере" или<br> "как жить без привата? <br> <br><img src="img/outlink.png" width="20px">
 </div>
 </a>
 
 <a href="buy">
 <div class = "wiki">
-<h1>Покупка доступа</h1>
-Покупка проходки<br>а также спонсорство <br> <br><img src="img/outlink.png" width="20px">
+<h2>Покупка доступа</h2>
+Покупка <br>проходки<br> <br><img src="img/outlink.png" width="20px">
+</div>
+</a>
+
+<a href="roleplay">
+<div class = "wiki">
+<h2>RolePlay</h2>
+Что такое рп <br>У нас?)<br> <br><img src="img/outlink.png" width="20px">
+</div>
+</a>
+
+<a href="voice">
+<div class = "wiki">
+<h2>Войс чат</h2>
+Установите мод для <br>голосового общения<br> <br><img src="img/outlink.png" width="20px">
+</div>
+</a>
+
+<a href="about">
+<div class = "wiki">
+<h2>История</h2>
+Сезоны и инфа о них <br>+ карты<br> <br><img src="img/outlink.png" width="20px">
 </div>
 </a>
 
