--- a/about-previous.html
+++ b/about-previous.html
@@ -106,7 +106,7 @@ $(function() {
 		
 		<h5>25.09.2021 • 1.16.5 •</h5>
 		Первый сезон ванильного выживания. Сервер приватный.
-		<center><a href="#" class="link-season"><img src="img/outlink.png" class="playico"> Скачать мир + ад</a></center>
+		<center><a href="https://drive.google.com/file/d/1fvt-3xF-XH2H3ajxGu25K30eygWN7Xr2/view?usp=sharing " class="link-season"><img src="img/outlink.png" class="playico"> Скачать мир + ад</a></center>
 	</text>
 </div>
 
