--- a/rules.html
+++ b/rules.html
@@ -73,7 +73,7 @@ $(function() {
 	</div>
 
 <div class="realmenu">
-	<a href="rules" class="btn">Правила</a>
+	<a href="rules" class="btn-selected">Правила</a>
 	<a href="wiki" class="btn">Вики</a>
 	<a href="https://discord.gg/HsxSPyg7RG" class="btn">Дискорд</a>
 	<a href="http://s23.joinserver.ru:25809/" class="btn">PochkaMaps</a>
