--- a/rules.html
+++ b/rules.html
@@ -133,6 +133,7 @@ $(function() {
 5.1 В вашем городе должно находиться здание правительства.<br>
 5.2 Любые войны должны происходить под присмотром администратора!<br>
 5.3 Во время официально признаной войны (объявленой в дс канале #новости), правила 1.2, 1.3 - не функционируют между сторонами атаки и защиты. <br>
+5.4 Ваш город может быть построен как минимум в 350 блоков от других городов.<br>
 </h4>
 </text>
 </div>
