--- a/wiki.html
+++ b/wiki.html
@@ -138,6 +138,13 @@ $(function() {
 Сезоны и инфа о них <br>+ карты<br> <br><img src="img/outlink.png" width="20px">
 </div>
 </a>
+	
+<a href="cooperation">
+<div class = "wiki">
+<h2>Сотрудничество</h2>
+Участвовать в партнёрской <br>программе PochkaCraft<br> <br><img src="img/outlink.png" width="20px">
+</div>
+</a>
 
 </div>
 
