--- a/rules.html
+++ b/rules.html
@@ -88,7 +88,7 @@ $(function() {
 1.1 Не знание правил не освобождает от ответственности.<br>
 1.2 Любая деформация/поломка построек, не принадлежащих вам запрещена.<br>
 1.3 Использование чужих сундуков и подобных блоков - запрещено.<br>
-1.4 Читерство, дюп (так же использование модов, дающие преимущество в игре) - запрещено.<br>
+1.4 Читерство, дюп (так же использование модов, дающие преимущество в игре) - запрещено. (Исключение: litematica easy place mode)<br>
 1.5 Убийства без РП причины на то или договоренности - запрещены. <br>
 1.6 Нарушение правил платформы Twitch - запрещено (символика, банворды и т.д.).<br>
 1.7 Оскорбительное и токсичное отношение (в любом проявлении) к игрокам, родным и администрации сервера.<br>
