--- a/wiki.html
+++ b/wiki.html
@@ -104,12 +104,13 @@ $(function() {
 </div>
 </a>
 
-<a href="coreprotect">
-<div class = "wiki">
-<h2>CoreProtect</h2>
-"Логирование всех блоков на сервере" или<br> "как жить без привата? <br> <br><img src="img/outlink.png" width="20px">
+<a href="event">
+<div class = "wiki">	
+<h2>Ивенты</h2>
+Ознакомиться с текущими/прошедшими<br>ивентами можно тут. <br> <br><img src="img/outlink.png" width="20px">
 </div>
 </a>
+
 
 <a href="buy">
 <div class = "wiki">
@@ -122,6 +123,13 @@ $(function() {
 <div class = "wiki">
 <h2>RolePlay</h2>
 Что такое рп <br>У нас?)<br> <br><img src="img/outlink.png" width="20px">
+</div>
+</a>
+
+<a href="coreprotect">
+<div class = "wiki">
+<h2>CoreProtect</h2>
+"Логирование всех блоков на сервере" или<br> "как жить без привата? <br> <br><img src="img/outlink.png" width="20px">
 </div>
 </a>
 
@@ -138,7 +146,7 @@ $(function() {
 Сезоны и инфа о них <br>+ карты<br> <br><img src="img/outlink.png" width="20px">
 </div>
 </a>
-	
+
 <a href="cooperation">
 <div class = "wiki">
 <h2>Сотрудничество</h2>
