--- a/event-previous.html
+++ b/event-previous.html
@@ -85,7 +85,7 @@ $(function() {
 	</center>
 </header>
 <div class="selector">
-	<a href="about">Текущие ивенты</a>
+	<a href="event">Текущие ивенты</a>
 	<a href="" class="activated-select">Предыдущие ивенты</a>
 </div>
 <div class="article">
