--- a/event.html
+++ b/event.html
@@ -91,7 +91,7 @@ $(function() {
 	<text class = "text-block">
 		<center><img src="img/secret-santa.jpg" width="" class="ivent-img"></center>
 		<h2>Тайный санта </h2>
-		<h3>Текущий этап - <span class="greenmark">Регистрация участников</span></h3>
+		<h3>Текущий этап - <span class="greenmark">Подготовка подарков</span></h3>
 		
 		<h5>• 22 декабря 2021 - 10 января 2022 •</h5>
 		Станьте волшебником новогодней поры, даря и получая тёплые, праздничные подарки!
