--- a/event-previous.html
+++ b/event-previous.html
@@ -99,7 +99,7 @@ $(function() {
 
 		<br><br><br>
 		<center>
-		<a class="btn-action" href="event">Подробнее</a></center>
+		<a class="btn-action" href="secret-santa">Подробнее</a></center>
 	</text>
 </div>
 
