--- a/secret-santa.html
+++ b/secret-santa.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Текущие ивенты - PochkaCraft</title>
+	<title>Тайный санта - PochkaCraft</title>
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
@@ -84,12 +84,34 @@ $(function() {
 	</center>
 </header>
 <div class="selector">
-	<a href="" class="activated-select">Текущие ивенты</a>
+	<a href="event" >Текущие ивенты</a>
 	<a href="event-previous">Предыдущие ивенты</a>
 </div>
 <div class="article">
 	<text class = "text-block">
-		На данный момент никаких ивентов не происходит.
+		<center><img src="img/secret-santa.jpg" width="" class="ivent-img"></center>
+		<h2>Тайный санта </h2>
+		<h3>Текущий этап - <span class="redmark">Ивент окончен</span></h3>
+		
+		<h5>• 22 декабря 2021 - 10 января 2022 •</h5>
+		Станьте волшебником новогодней поры, даря и получая тёплые, праздничные подарки!
+		<br><br>
+		Заполнив нашу Google Форму вы автоматически примите участие в нашем ивенте! Поле "Пожелание" - подсказка дарящему, чего вы бы хотели. Имейте ввиду что не каждый игрок сможет позволить себе дорогой подарок.
+		<br><h3>Что делать вам?</h3>
+		Суть крайне проста: вам рандомно выпадает анкета другого игрока, с его пожеланием, которому вам надо будет сделать подарок!
+		<br><br> <span class="redmark">Подарок вы не дарите игроку!</span> А передаёте KeRas1n'у (если не в сети - пишите в лс в дискорде)!<br> 31 декабря все подарки будут под центральной ёлкой на спавне с подписями!
+		<br>
+		<h2>Этапы:</h2>
+			21 - 26 декабря ---> Регистрация участников
+		<br>27 - 30 декабря ---> Подготовка подарков!
+		<br>31 декабря ---> Твой подарок под ёлкой!
+
+
+
+		<br><br><br>
+
+		<center>
+		<a class="btn-action" href="https://forms.gle/HCFyEGKghETDqYk57">Участвовать!</a></center>
 	</text>
 </div>
 
