--- a/about-previous.html
+++ b/about-previous.html
@@ -108,6 +108,15 @@ $(function() {
 		Первый сезон ванильного выживания. Сервер приватный.
 		<center><a href="https://drive.google.com/file/d/1fvt-3xF-XH2H3ajxGu25K30eygWN7Xr2/view?usp=sharing " class="link-season"><img src="img/outlink.png" class="playico"> Скачать мир + ад</a></center>
 	</text>
+	<br>
+	<text class = "text-block">
+		<img src="img/ava.jpg" width="80">
+		<h2>PochkaCraft 2</h2>
+		
+		<h5>01.12.2021 • 1.16.5 •</h5>
+		Второй сезон ванильного выживания. Сервер приватный.
+		<center><a href="https://drive.google.com/drive/folders/18z8t4z4RJPiVu5VEDfl6U2GNkPGdMjM7?usp=sharing " class="link-season"><img src="img/outlink.png" class="playico"> Скачать мир + ад</a></center>
+	</text>
 </div>
 
 <footer>
