--- a/about-previous.html
+++ b/about-previous.html
@@ -110,12 +110,12 @@ $(function() {
 	</text>
 	<br>
 	<text class = "text-block">
-		<img src="img/ava.jpg" width="80">
+		<img src="img/ava-sec.png" width="80">
 		<h2>PochkaCraft 2</h2>
 		
 		<h5>01.12.2021 • 1.16.5 •</h5>
 		Второй сезон ванильного выживания. Сервер приватный.
-		<center><a href="https://drive.google.com/drive/folders/18z8t4z4RJPiVu5VEDfl6U2GNkPGdMjM7?usp=sharing " class="link-season"><img src="img/outlink.png" class="playico"> Скачать мир + ад</a></center>
+		<center><a href="https://drive.google.com/drive/folders/18z8t4z4RJPiVu5VEDfl6U2GNkPGdMjM7?usp=sharing " class="link-season"><img src="img/outlink.png" class="playico"> Скачать мир</a></center>
 	</text>
 </div>
 
