--- a/about.html
+++ b/about.html
@@ -90,11 +90,11 @@ $(function() {
 </div>
 <div class="article">
 	<text class = "text-block">
-		<img src="img/ava.jpg" width="80">
+		<img src="img/ava-sec.png" width="80">
 		<h2>PochkaCraft 2</h2>
 		
-		<h5>1 декабря 2021 • 1.16.5 •</h5>
-		Второй сезон PochkaCraft открылся 1 декабря 2021 года. В этом сезоне были учтены множество нюансов из предыдуших сезонов.
+		<h5>1 декабря 2021 • 1.16.5 • - СЕЗОН ЗАКОНЧЕН</h5>
+		На данный момент сервер не работает. Почкакрафт просуществовал ровно 6 месяцев. Следите за новостями на нашем дискорд сервере.
 	</text>
 </div>
 
