--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@ $(function() {
 				<span class="server-online">⬤ Сервер оффлайн<style>.server-online{color:red;}</style></span><br>
 
     			<span class="server-online-players" id="server-online-players">0</span> / <span class="server-online-players-max" id="server-online-players">20</span> <br>
+					<span class="server-online">РАБОТА СЕРВЕРА ПРИОСТАНОВЛЕНА 24 МАРТА</span>
     			</div>
 			</div>
 </header>
