--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
 	<script src="https://mcapi.us/scripts/minecraft.min.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 <script>
-    MinecraftAPI.getServerStatus('s23.joinserver.ru', {
-        port: 25737 // optional, only if you need a custom port
+    MinecraftAPI.getServerStatus('play.volxy.xyz', {
+        port: 25610 // optional, only if you need a custom port
     }, function (err, status) {
         if (err) {
-            return document.querySelector('.server-status').innerHTML = 'Ошибка загрузки статуса.';
+            return document.querySelector('.server-status').innerHTML = 'Error loading status.';
         }
 
         // you can change these to your own message!
         document.querySelector('.server-online-players').innerHTML = status.players.now;
-        document.querySelector('.server-online').innerHTML = status.online ? '⬤ Сервер онлайн <style>.server-online{color:LimeGreen; }</style>' : '⬤ Сервер оффлайн<style>.server-online{color:red;}</style>';
+        document.querySelector('.server-online').innerHTML = status.online ? '⬤ Server is online! <style>.server-online{color:LimeGreen; }</style>' : '⬤ Server is offline! <style>.server-online{color:red;}</style>';
         document.querySelector('.server-online-players-max').innerHTML = status.players.max;
     });
 
@@ -55,7 +55,8 @@
   $temp.val($(element).text()).select();
   document.execCommand("copy");
   $temp.remove();
-  alert("Ip адрес сервера скопирован");
+  alert(" Server IP Copied!
+	");
 }
 //} 
 </script>
@@ -115,13 +116,13 @@ $(function() {
 			<a class="menu-close" href="#"></a>
 
 			<ul>
-				<li><a href="rules">Правила</a></li>
+				<li><a href="rules">Rules!</a></li>
 
-				<li><a href="wiki">Вики</a></li>		
+				<li><a href="wiki">Wiki!</a></li>		
 
-				<li><a href="https://discord.gg/HsxSPyg7RG">Дискорд</a></li>
+				<li><a href="https://discord.gg/HsxSPyg7RG">Discord</a></li>
 
-				<li><a href="http://s23.joinserver.ru:25809/">PochkaMaps</a></li>
+				<li><a href="http://s23.joinserver.ru:25809/">Map!</a></li>
 
 			</ul>						
 
@@ -130,28 +131,28 @@ $(function() {
 	</div>
 
 <div class="realmenu">
-	<a href="rules" class="btn">Правила</a>
-	<a href="wiki" class="btn">Вики</a>
-	<a href="https://discord.gg/HsxSPyg7RG" class="btn">Дискорд</a>
-	<a href="http://s23.joinserver.ru:25809/" class="btn">PochkaMaps</a>
+	<a href="rules" class="btn">Rules!</a>
+	<a href="wiki" class="btn">Wiki!</a>
+	<a href="https://discord.gg/HsxSPyg7RG" class="btn">Discord</a>
+	<a href="http://s23.joinserver.ru:25809/" class="btn">Map!</a>
 </div>
 </div>
 
 <header class="header">
 <div class="offer">
 				<br>
-				<p class = "toptitle" id="ipadres">pochkacraft.joinserver.ru</p>
+				<p class = "toptitle" id="ipadres">play.volxy.xyz</p>
 				<h1>
 					POCHKACRAFT
 				</h1>
 				<p class = "toptitle">1.16.5</p>
-				<p class = "mainp">Ванильный, приватный сервер без доната и дурацких плагинов</p><br>
-				<a href = "freedays" class = "freedays-link">СЕЙЧАС БЕСПЛАТНЫЕ ДНИ</a>
-				<a href = "halloween" class = "ivent-link">ТЕКУЩИЙ ИВЕНТ: ХЭЛЛОУИН</a><br>
-				<a href="buy" class="buy"><img src="img/buy.png">Купить доступ на сервер</a><br>
-				<button class ="copy" onclick="copyToClipboard('#ipadres')"><img src="img/copy-logo.png" height="18px">Скопировать IP</button><br>
+				<p class = "mainp">VolxyMC the next big thing!</p><br>
+				<a href = "freedays" class = "freedays-link">e</a>
+				<a href = "halloween" class = "ivent-link">e</a><br>
+				<a href="buy" class="buy"><img src="img/buy.png">Visit our shop!</a><br>
+				<button class ="copy" onclick="copyToClipboard('#ipadres')"><img src="img/copy-logo.png" height="18px">Copy ip</button><br>
 				<div class="status">
-				<span class="server-online">⬤ Сервер оффлайн<style>.server-online{color:red;}</style></span><br>
+				<span class="server-online">⬤ Server Offline<style>.server-online{color:red;}</style></span><br>
 
     			<span class="server-online-players" id="server-online-players">0</span> / <span class="server-online-players-max" id="server-online-players">20</span> <br>
 					<span class="server-online">РАБОТА СЕРВЕРА ПРИОСТАНОВЛЕНА 24 МАРТА</span>
@@ -171,8 +172,8 @@ $(function() {
 
 <div class="textik">
 <h1>Сервер приватный?</h1>
-<p> Доступ на сервер ограничен и доступен по <span class="redmark">платной/бесплатной</span> проходке. </p>
-<p>Это означает что у нас <span class="redmark">отсутствуют все возможные донатные привилегии</span> ну и реклама на пол экрана о скидках тоже) <br><br>Всё что вы платите это ежемесячная проходка. Так сервер может окупать своё существование на хостинге, ну и приватность сервера = барьер от недобросовестных игроков. Новички же могут получить первый месяц бесплатно заполнив <a href="">анкету.</a></p>
+<p> This server is 100% free! <span class="redmark">платной/бесплатной</span> No Pay To Win! </p>
+<p> We're not pay to win <span class="redmark"> meaning we run on donations!</span> If you want to donate you can visit our shop <br><br>Всё что вы платите это ежемесячная проходка. Так сервер может окупать своё существование на хостинге, ну и приватность сервера = барьер от недобросовестных игроков. Новички же могут получить первый месяц бесплатно заполнив <a href="">анкету.</a></p>
 
 </div>
 </div>
