--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ $(function() {
 
 <div class="textik">
 <h1>Сервер приватный?</h1>
-<p> This server is 100% free! <span class="redmark">платной/бесплатной</span> No Pay To Win! </p>
+<p> This server is 100% free! <span class="redmark">No Pay To Win!</span></p>
 <p> We're not pay to win <span class="redmark"> meaning we run on donations!</span> If you want to donate you can visit our shop <br><br>Всё что вы платите это ежемесячная проходка. Так сервер может окупать своё существование на хостинге, ну и приватность сервера = барьер от недобросовестных игроков. Новички же могут получить первый месяц бесплатно заполнив <a href="">анкету.</a></p>
 
 </div>
@@ -201,21 +201,22 @@ pochkacraft.joinserver.ru <br>Версия - 1.16.5
 </div>
 
 <div class = "question">
-	<h2>Можно играть с телефона?</h2>
-Нет. Сервер работает <br>только на Java Edition.
+	<h2>Can i join on bedrock/mcpe</h2>
+Yes our server is crossplay! You can join from Xbox/Switch/Playstation/PC/MCPE
 </div>
 
 <div class = "question">
-	<h2>Как включить войс чат?</h2>
-Для этого необходимо просто установить мод.<br>
-<a href="voice">Подробнее</a>
+	<h2>How to enable proximity chat?</h2>
+To do this you have to like your discord account with our server!<br>
+<a href="voice">Learn more.</a>
 </div>
 
 </div>
 
 <div class="div-fourth-atall">
 <div class="div-fourth" id="b_3"><br>
-	<center><h2>Видео про PochkaCraft</h2><br>
+	<center><h2> Video about VolxyMC
+		</h2><br>
 		
 		<br>
 
@@ -226,12 +227,10 @@ pochkacraft.joinserver.ru <br>Версия - 1.16.5
 <iframe width="1000" height="530" src="https://www.youtube.com/embed/90Ref8FT0UI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <center><a href="https://youtube.com/playlist?list=PLU0vFHqNb9hfiDoeavfQG2nlzNI5ZXRwd">Больше видео</a></center>
 <br>
-<a href="buy" class="buy"><img src="img/buy.png">Купить доступ на сервер</a><br>
 <footer>
     <a href = "https://discord.gg/HsxSPyg7RG" class="foolink"> Дискорд </a> <br><a href = "votes.html">Проголосовать на мониторингах</a><br>
-    <text>© PochkaCraft 2021 | <a href="https://twitch.tv/lingkeras1n">Made by KeRas1n</a></text><br>
+    <text>© VolxyMC 2021 - 2022 | <a href="https://twitch.tv/lingkeras1n">Made with ❤️ by Danii</a></text><br>
     <text> We are in no way affiliated with or endorsed by Mojang, AB.</text><br>
-    <text>Вся размещенная информация на сайте не является публичной офертой.</text>
 </footer>
 </body>
 </html>
