--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@ $(function() {
 				<br>
 				<p class = "toptitle" id="ipadres">play.volxy.xyz</p>
 				<h1>
-					POCHKACRAFT
+					   VolxyMC!
 				</h1>
-				<p class = "toptitle">1.16.5</p>
+				<p class = "toptitle">1.12x 1.18.2! Crossplay.</p>
 				<p class = "mainp">VolxyMC the next big thing!</p><br>
 				<a href = "freedays" class = "freedays-link">e</a>
 				<a href = "halloween" class = "ivent-link">e</a><br>
@@ -182,21 +182,21 @@ $(function() {
 
 <div class="div-third-atall">
 <div class="div-third" id="b_3"><br>
-<center><h1>ОТВЕТЫ НА ВОПРОСЫ</h1></center>
+<center><h1>FAQ</h1></center>
 
 <div class = "question">
-	<h2>Нужна лицензия для игры?</h2>
+	<h2>Can i join from T-Launcher?</h2>
 
-Нет, для игры на сервере <br>лицензия не нужна.
+No. Cracked is not allowed <br> and never will be...
 </div>
 
 <div class = "question">
-	<h2>Какой айпи и версия серва?</h2>
-pochkacraft.joinserver.ru <br>Версия - 1.16.5
+	<h2>What is the ip and server version</h2>
+play.volxy.xyz <br>Версия - The server is 1.16.5 but you can join 1.12x 1.18.2!
 </div>
 
 <div class = "question">
-	<h2>Нету приватов? Что делать?</h2>
+	<h2>k?</h2>
 У нас есть логирование <br>блоков, подробнее - <a href="coreprotect">CoreProtect</a>
 </div>
 
