--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ $(function() {
 </div>
 
 <div class="textik">
-<h1>Сервер приватный?</h1>
+<h1>Is this server pay to win?</h1>
 <p> This server is 100% free! <span class="redmark">No Pay To Win!</span></p>
 <p> We're not pay to win <span class="redmark"> meaning we run on donations!</span> If you want to donate you can visit our shop <br><br>Всё что вы платите это ежемесячная проходка. Так сервер может окупать своё существование на хостинге, ну и приватность сервера = барьер от недобросовестных игроков. Новички же могут получить первый месяц бесплатно заполнив <a href="">анкету.</a></p>
 
